xliff-22/test-suite/core/invalid/bad_IsolatedEcWithId.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en">
 <file id="f1">
  <unit id="1">
   <segment>
    <source><ec startRef="1" isolated="yes"/></source> <!-- should use id not startRef -->
   </segment>
  </unit>
 </file>
</xliff>
